--- a/templates/default.conf.j2
+++ b/templates/default.conf.j2
@@ -1,56 +1,38 @@
-# {{ ansible_managed }}
-
-upstream foreman {
-    server localhost:3000;
-}
-
+{% for vhost in nginx_vhosts %}
 server {
-    listen       80 default_server;
-    server_name  {{ nginx_server_name }};
 
-    access_log  /var/log/nginx/foreman.access.log  main;
-    error_log   /var/log/nginx/foreman.error.log;
+    listen {{ vhost.serverlisten }};
+{% if vhost.serveralias is defined %}
+    server_name {{ vhost.servername }} {{ vhost.serveralias }};
+{% else %}
+    server_name {{ vhost.servername }};
+{% endif %}
 
-    error_page  404              /404.html;
-    location = /404.html {
-        root   /usr/share/nginx/html;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    access_log      /var/log/nginx/{{ vhost.servername }}_access.log;
+    error_log       /var/log/nginx/{{ vhost.servername }}_error.log warn;
 
     location / {
-        proxy_pass http://foreman;
+
+{% if vhost.docroot is defined %}
+    root {{ vhost.docroot }};
+{% endif %}
+
+{% if vhost.extra_parameters is defined %}
+    {{ vhost.extra_parameters }}
+{% endif %}
+
+{% if vhost.proxy %}
+    proxy_set_header          Host $host;
+    proxy_set_header          Accept-Encoding "";
+    proxy_set_header          X-Real-IP $remote_addr;
+    proxy_set_header          X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header          X-Forwarded-Proto $scheme;
+    proxy_buffering on;
+    proxy_pass                http://{{ vhost.proxy.ip }}:{{ vhost.proxy.port }};
+    proxy_read_timeout        90;
+    proxy_redirect            http://{{ vhost.proxy.ip}}:{{ vhost.proxy.port }} http://$server_name;
+{% endif %}
+
     }
 }
-
-
-upstream foreman {
-    server localhost:3000;
-}
-
-server {
-    listen 80;
-    server_name plpp.domain.com;
-    return 301 https://$server_name$request_uri;
-}
-server {  
-    listen 443 ssl http2;
-    server_name plpp.domain.com;
-
-#SSL settings
-    include /config/nginx/ssl.conf
-
-location / {
-    proxy_pass http://192.168.1.2:8701;
-    include /config/nginx/proxy.conf;
-    proxy_set_header Accept-Encoding "";
-    sub_filter
-    '</head>'
-    '<link rel="stylesheet" type="text/css" href="https://gilbn.github.io/theme.park/CSS/themes/plpporg.css">
-    </head>';
-    sub_filter_once on;
-  }
-}
+{% endfor %}
