add nginx group to config

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-user              {{ nginx_user }};
+user              {{ nginx_user }} {{ nginx_group }};
 worker_processes  {{ nginx_worker_processes }};
 
 error_log  /var/log/nginx/error.log;
