add templating for extra vhost location paths

--- a/templates/default-ssl.conf.j2
+++ b/templates/default-ssl.conf.j2
@@ -40,7 +40,13 @@ server {
     sub_filter_once on;
 {% endif %}
 {% endif %}
-
     }
+{% if vhost.extra_locations is defined and vhost.extra_locations is mapping %}
+{% for key, value in vhost.extra_locations.items() %}
+    location /{{ key }} {
+    root {{ value }};
+    }
+{% endfor %}
+{% endif %}
 }
 {% endfor %}
