--- a/templates/default.conf.j2
+++ b/templates/default.conf.j2
@@ -25,15 +25,12 @@ server {
     error_log       /var/log/nginx/{{ vhost.servername | default(nginx_default_servername) }}_error.log warn;
 
     location / {
-
 {% if vhost.docroot is defined and vhost.docroot != None %}
     root {{ vhost.docroot }};
 {% endif %}
-
 {% if vhost.extra_parameters is defined and vhost.extra_parameters != None %}
-    {{ vhost.extra_parameters }}
+    {{ vhost.extra_parameters|indent(4, False) }}
 {% endif %}
-
 {% if vhost.proxy is defined and vhost.proxy %}
     include /etc/nginx/proxy.conf;
     proxy_pass                http://{{ vhost.proxy_ip }}:{{ vhost.proxy_port }};
@@ -48,7 +45,6 @@ server {
 {% endif %}
 {% endif %}
     }
-
 {% if vhost.extra_locations is defined and vhost.extra_locations is mapping %}
 {% for key, value in vhost.extra_locations.items() %}
     location /{{ key }} {
@@ -56,6 +52,5 @@ server {
     }
 {% endfor %}
 {% endif %}
-
 }
 {% endfor %}
