--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -6,6 +6,8 @@ worker_processes  {{ nginx_worker_processes }};
 error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
+include /etc/nginx/modules-enabled/*.conf;
+
 events {
     worker_connections  {{ nginx_worker_connections }};
 }
@@ -15,7 +17,7 @@ http {
     server_tokens off;
     include       /etc/nginx/mime.types;
     include    /etc/nginx/proxy.conf;
-    index    index.html index.htm index.php;
+    index    index.php index.html index.htm;
     default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
