--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -20,9 +20,10 @@ http {
     index    index.php index.html index.htm;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main '$remote_addr - $remote_user [$time_local]'
+                  '"$request" $status $body_bytes_sent'
+                  '"$http_referer" "$http_user_agent"'
+                  '$request_time $upstream_connect_time $http_x_forwarded_for';
 
     access_log  /var/log/nginx/access.log  main;
 
