--- a/templates/proxy.conf.j2
+++ b/templates/proxy.conf.j2
@@ -1,9 +1,23 @@
-proxy_set_header        Host            $host;
-proxy_set_header        X-Real-IP       $remote_addr;
-proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-client_max_body_size    10m;
-client_body_buffer_size {{ nginx_client_body_buffer_size }};
-proxy_connect_timeout   {{ nginx_proxy_connect_timeout }};
-proxy_send_timeout      {{ nginx_proxy_send_timeout }};
-proxy_read_timeout      {{ nginx_proxy_read_timeout }};
-proxy_buffers           {{ nginx_proxy_buffers }};
+# {{ ansible_managed }}
+
+proxy_set_header        Host            	$host;
+proxy_set_header        X-Real-IP       	$remote_addr;
+proxy_set_header        X-Forwarded-For 	$proxy_add_x_forwarded_for;
+proxy_set_header 		X-Forwarded-Proto 	$scheme;
+proxy_http_version 		1.1;
+proxy_set_header 		Connection 			"";
+proxy_buffering	{{ nginx_proxy_buffering }};
+client_max_body_size	{{ nginx_client_max_body_size }};
+client_body_buffer_size	{{ nginx_client_body_buffer_size }};
+proxy_connect_timeout	{{ nginx_proxy_connect_timeout }};
+proxy_send_timeout	{{ nginx_proxy_send_timeout }};
+proxy_read_timeout	{{ nginx_proxy_read_timeout }};
+proxy_buffers	{{ nginx_proxy_buffers }};
+proxy_buffer_size	{{ nginx_proxy_buffer_size }};
+proxy_busy_buffers_size	{{ nginx_proxy_busy_buffers_size }};
+proxy_max_temp_file_size	{{ nginx_proxy_max_temp_file_size }};
+proxy_temp_file_write_size	{{ nginx_proxy_temp_file_write_size }};
+keepalive_requests {{ nginx_keepalive_requests }};
+keepalive_timeout {{ nginx_keepalive_timeout }};
+fastcgi_read_timeout {{ nginx_fastcgi_read_timeout }};
+fastcgi_send_timeout {{ nginx_fastcgi_send_timeout }};
