--- a/templates/ssl.conf.j2
+++ b/templates/ssl.conf.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+
 ssl_session_cache  builtin:1000  shared:SSL:10m;
 ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
 ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
