--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -14,29 +14,29 @@ events {
 }
 
 http {
+
+    index   {% for i in nginx_index %}{{ i }}{% if not loop.last %} {% endif %}{% endfor %};
     server_names_hash_bucket_size {{ nginx_server_names_hash_bucket_size }};
-    server_tokens off;
-    include       /etc/nginx/mime.types;
-    include    /etc/nginx/proxy.conf;
-    index    index.php index.html index.htm;
-    default_type  application/octet-stream;
+    server_tokens {{ nginx_server_tokens }};
+    sendfile {{ nginx_sendfile }};
+    tcp_nopush {{ nginx_tcp_nopush }};
+    default_type "{{ nginx_default_type }}";
 
-    log_format main '$remote_addr - $remote_user [$time_local]'
-                  '"$request" $status $body_bytes_sent'
-                  '"$http_referer" "$http_user_agent"'
-                  '$request_time $upstream_connect_time $http_x_forwarded_for';
+    gzip {{ nginx_gzip }};
+    gzip_vary {{ nginx_gzip_vary }};
+    gzip_disable "{{ nginx_gzip_disable }}";
+    gzip_proxied {{ nginx_gzip_proxied }};
+    gzip_http_version {{ nginx_gzip_http_version }};
+    gzip_min_length {{ nginx_gzip_min_length }};
+    gzip_comp_level {{ nginx_gzip_comp_level }};
+    gzip_buffers {{ nginx_gzip_buffers }};
 
-    access_log  /var/log/nginx/access.log  main;
+    log_format main {{ nginx_log_format_main | indent(20, False) }}
+                    
+    access_log  {{ nginx_access_log }};
 
-    sendfile        on;
-    tcp_nopush     on;
-    gzip  on;
-    gzip_vary on;
-    gzip_disable “MSIE [1-6].”;
-    gzip_proxied any;
-    gzip_http_version 1.0;
-    gzip_min_length 1000;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
+    include /etc/nginx/mime.types;
+    include /etc/nginx/proxy.conf;
     include {{ nginx_cfg_dir }}/*;
+
 }
