--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -31,12 +31,18 @@ http {
     gzip_comp_level {{ nginx_gzip_comp_level }};
     gzip_buffers {{ nginx_gzip_buffers }};
 
+    client_body_buffer_size {{ nginx_client_body_buffer_size }};
+    client_body_temp_path {{ nginx_client_body_temp_path }};
+    client_body_timeout {{ nginx_client_body_timeout }};
+    client_max_body_size {{ nginx_client_max_body_size }};
+    client_header_buffer_size {{ nginx_client_header_buffer_size }};
+    client_header_timeout {{ nginx_client_header_timeout }};
+
     log_format main {{ nginx_log_format_main | indent(20, False) }}
                     
     access_log  {{ nginx_access_log }};
 
     include /etc/nginx/mime.types;
-    include /etc/nginx/proxy.conf;
     include {{ nginx_cfg_dir }}/*;
 
 }
