--- a/templates/proxy.conf.j2
+++ b/templates/proxy.conf.j2
@@ -5,7 +5,8 @@ proxy_set_header        X-Real-IP       	$remote_addr;
 proxy_set_header        X-Forwarded-For 	$proxy_add_x_forwarded_for;
 proxy_set_header 		X-Forwarded-Proto 	$scheme;
 proxy_http_version 		1.1;
-proxy_set_header 		Connection 			"";
+proxy_set_header 		Connection 			"upgrade";
+proxy_set_header        upgrade             $http_upgrade;
 
 # Proxy Buffers
 proxy_temp_path {{ nginx_proxy_temp_path }};
