update configs with vhost extra parameters

--- a/templates/default.conf.j2
+++ b/templates/default.conf.j2
@@ -24,6 +24,9 @@ server {
 {% endif %}
     access_log      /var/log/nginx/{{ vhost.servername | default(nginx_default_servername) }}_access.log main;
     error_log       /var/log/nginx/{{ vhost.servername | default(nginx_default_servername) }}_error.log warn;
+{% if vhost.extra_parameters is defined and vhost.extra_parameters != None %}
+    {{ vhost.extra_parameters|indent(4, False) }}
+{% endif %}
 {% for location in vhost.locations %}
     location {{ location.name }} {
 {% if location.docroot is defined and location.docroot != None %}
