update vars for defaults and os specific to use user/group provided by ldap

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-user              {{ nginx_user }} {{ nginx_group }};
+user              {{ nginx_user|default(nginx_default_user) }} {{ nginx_group|default(nginx_default_group) }};
 worker_processes  {{ nginx_worker_processes }};
 worker_rlimit_nofile {{ nginx_worker_rlimit_nofile }};
 
