--- a/templates/ffmpeg_transcode.service.j2
+++ b/templates/ffmpeg_transcode.service.j2
@@ -1,16 +1,15 @@
 [Unit]
 Description=FFMPEG Transcode service for RTSP camera feeds to RTMP Files and HLS Webservice
-After=network.target
-Before=nginx.service
+After=network.target nginx.service
 
 {% if shared_storage and ( data_mount_root in nginx_hls_camera_feed_transcode_dir ) %}
 
 # Ensure shared storage is mounted
 ConditionPathIsMountPoint={{ data_mount_root }}
+ConditionPathIsReadWrite={{ data_mount_root }}
 
 # Require before starting and trigger reloads and stops from shared storage mount
 Requires={{ data_mount_root | regex_replace('^\\/', '') }}.mount
-
 ReloadPropagatedFrom={{ data_mount_root | regex_replace('^\\/', '') }}.mount
 
 {% endif %}
@@ -23,4 +22,4 @@ ExecStart=/usr/local/bin/rtsp_to_rtmp_transcode.sh
 RestartSec=1min
 
 [Install]
-WantedBy=multi-user.target nginx.service
+WantedBy=multi-user.target nginx.service {{ data_mount_root | regex_replace('^\\/', '') }}.mount
