update var name for conf.d path

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -58,10 +58,12 @@ http {
 
     include /etc/nginx/mime.types;
 
+
+
 {% if nginx_extra_parameters is defined and nginx_extra_parameters != None %}
     {{ nginx_extra_parameters|indent(4, False) }}
 {% endif %}
 
-    include {{ nginx_cfg_dir }}/*;
+    include {{ nginx_conf_d_dir }}/*;
 
 }
