--- a/templates/theme-park-settings.conf.j2
+++ b/templates/theme-park-settings.conf.j2
@@ -1,3 +1,3 @@
 map $host $theme {
-    default plex; # e.g. default organizr
+    default {{ nginx_custom_css_theme|default('plex') }}; # e.g. default organizr
 }
